CI: add QCA9988
We have QCA9988 BDF submited, so make sure to match for it as well.

Signed-off-by: Robert Marko <robimarko@gmail.com>

--- a/.github/workflows/bdf.yaml
+++ b/.github/workflows/bdf.yaml
@@ -22,7 +22,7 @@ jobs:
           # grep will return 1 if no matches, so ignore return code
           set +e
           # Find list of ath10k changed BDF-s
-          ATH10K_CHANGED_BDFS="$(echo ${{ needs.determine_changed_files.outputs.all_changed_files }} | tr ' ' '\n' | grep -E '.qca4019|.qca9888|.qca9889|.qca9984|.qca99x0')"
+          ATH10K_CHANGED_BDFS="$(echo ${{ needs.determine_changed_files.outputs.all_changed_files }} | tr ' ' '\n' | grep -E '.qca4019|.qca9888|.qca9889|.qca9984|.qca9988|.qca99x0')"
 
           # Find list of ath11k changed BDF-s
           ATH11K_CHANGED_BDFS="$(echo ${{ needs.determine_changed_files.outputs.all_changed_files }} | tr ' ' '\n' | grep -E '.ipq5018|.ipq6018|.ipq8074|.qcn6122|.qcn9074')"
